# gamechat

./: Cargo.toml  README.md
.cargo/: config.toml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
network/: Cargo.toml
network/src/: lib.rs  session.rs  voice.rs
ui/: Cargo.toml
ui/src/: main.rs
ui/ui/: admin-panel.slint  app-window.slint  channel-list.slint  chat-area.slint  login-screen.slint  room-list.slint  server-rail.slint  settings-modal.slint  theme.slint  user-profile.slint
