[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = { version = "0.7", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

rand = "0.8"
# Intentionally omitting opus for now to avoid cmake build issues on Windows.
# Will use raw PCM (high bandwidth) for prototype.




chat_core = { path = "../chat_core" }

